@@ -2,7 +2,7 @@ package com.willmolloy.hackerrank.regex.applications.easy;
 
 import static com.google.common.truth.Truth.assertThat;
 
-import com.google.common.collect.ImmutableList;
+import java.util.List;
 import org.junit.jupiter.api.Test;
 
 /**
@@ -16,7 +16,7 @@ final class UkAndUsPart2Test {
   void testCase0() {
     assertThat(
             UkAndUsPart2.process(
-                ImmutableList.of(
+                List.of(
                     "2",
                     "the odour coming out of the leftover food was intolerable",
                     "ammonia has a very pungent odor",
@@ -27,13 +27,13 @@ final class UkAndUsPart2Test {
 
   @Test
   void wordEndsWithOr() {
-    assertThat(UkAndUsPart2.process(ImmutableList.of("1", "color colour", "1", "colour")))
+    assertThat(UkAndUsPart2.process(List.of("1", "color colour", "1", "colour")))
         .containsExactly(2);
   }
 
   @Test
   void wordContainsOr() {
-    assertThat(UkAndUsPart2.process(ImmutableList.of("1", "favorite favourite", "1", "favourite")))
+    assertThat(UkAndUsPart2.process(List.of("1", "favorite favourite", "1", "favourite")))
         .containsExactly(2);
   }
 }
