@@ -2,7 +2,7 @@ package com.willmolloy.hackerrank.regex.applications.medium;
 
 import static com.google.common.truth.Truth.assertThat;
 
-import com.google.common.collect.ImmutableList;
+import java.util.List;
 import org.junit.jupiter.api.Test;
 
 /**
@@ -14,19 +14,19 @@ final class DetectTheDomainNameTest {
 
   @Test
   void stripWww() {
-    assertThat(DetectTheDomainName.extractDomainNames(ImmutableList.of("http://www.google.com")))
+    assertThat(DetectTheDomainName.extractDomainNames(List.of("http://www.google.com")))
         .isEqualTo("google.com");
   }
 
   @Test
   void allowNumbers() {
-    assertThat(DetectTheDomainName.extractDomainNames(ImmutableList.of("http://www.g123oogle.com")))
+    assertThat(DetectTheDomainName.extractDomainNames(List.of("http://www.g123oogle.com")))
         .isEqualTo("g123oogle.com");
   }
 
   @Test
   void allowDashes() {
-    assertThat(DetectTheDomainName.extractDomainNames(ImmutableList.of("http://www.face-book.com")))
+    assertThat(DetectTheDomainName.extractDomainNames(List.of("http://www.face-book.com")))
         .isEqualTo("face-book.com");
   }
 
@@ -34,7 +34,7 @@ final class DetectTheDomainNameTest {
   void allowVariousDomains() {
     assertThat(
             DetectTheDomainName.extractDomainNames(
-                ImmutableList.of("http://a.net", "https://b.org http://c.com")))
+                List.of("http://a.net", "https://b.org http://c.com")))
         .isEqualTo("a.net;b.org;c.com");
   }
 
@@ -42,20 +42,20 @@ final class DetectTheDomainNameTest {
   void disallowMissingDomain() {
     assertThat(
             DetectTheDomainName.extractDomainNames(
-                ImmutableList.of("http://google", "http://google com", "http://google,com")))
+                List.of("http://google", "http://google com", "http://google,com")))
         .isEmpty();
   }
 
   @Test
   void disallowMissingHttp() {
-    assertThat(DetectTheDomainName.extractDomainNames(ImmutableList.of("google.com"))).isEmpty();
+    assertThat(DetectTheDomainName.extractDomainNames(List.of("google.com"))).isEmpty();
   }
 
   @Test
   void noDuplicates() {
     assertThat(
             DetectTheDomainName.extractDomainNames(
-                ImmutableList.of("http://google.com http://www.google.com", "http://google.com")))
+                List.of("http://google.com http://www.google.com", "http://google.com")))
         .isEqualTo("google.com");
   }
 
@@ -63,7 +63,7 @@ final class DetectTheDomainNameTest {
   void orderResultLexicographically() {
     assertThat(
             DetectTheDomainName.extractDomainNames(
-                ImmutableList.of("http://c.com http://a.com", "http://b.com")))
+                List.of("http://c.com http://a.com", "http://b.com")))
         .isEqualTo("a.com;b.com;c.com");
   }
 }
