@@ -2,7 +2,7 @@ package com.willmolloy.hackerrank.regex.applications.medium;
 
 import static com.google.common.truth.Truth.assertThat;
 
-import com.google.common.collect.ImmutableList;
+import java.util.List;
 import org.junit.jupiter.api.Test;
 
 /**
@@ -14,34 +14,32 @@ final class DetectTheEmailAddressesTest {
 
   @Test
   void noDuplicates() {
-    assertThat(DetectTheEmailAddresses.extractEmailAddresses(ImmutableList.of("a@b.c", "a@b.c")))
+    assertThat(DetectTheEmailAddresses.extractEmailAddresses(List.of("a@b.c", "a@b.c")))
         .isEqualTo("a@b.c");
   }
 
   @Test
   void requireAtLeastOneLeadingDomain() {
-    assertThat(DetectTheEmailAddresses.extractEmailAddresses(ImmutableList.of("@a.b"))).isEmpty();
-    assertThat(DetectTheEmailAddresses.extractEmailAddresses(ImmutableList.of("a@b.c")))
-        .isEqualTo("a@b.c");
+    assertThat(DetectTheEmailAddresses.extractEmailAddresses(List.of("@a.b"))).isEmpty();
+    assertThat(DetectTheEmailAddresses.extractEmailAddresses(List.of("a@b.c"))).isEqualTo("a@b.c");
   }
 
   @Test
   void requireAtLeastTwoTrailingDomains() {
-    assertThat(DetectTheEmailAddresses.extractEmailAddresses(ImmutableList.of("a@"))).isEmpty();
-    assertThat(DetectTheEmailAddresses.extractEmailAddresses(ImmutableList.of("a@b"))).isEmpty();
-    assertThat(DetectTheEmailAddresses.extractEmailAddresses(ImmutableList.of("a@b.c")))
-        .isEqualTo("a@b.c");
+    assertThat(DetectTheEmailAddresses.extractEmailAddresses(List.of("a@"))).isEmpty();
+    assertThat(DetectTheEmailAddresses.extractEmailAddresses(List.of("a@b"))).isEmpty();
+    assertThat(DetectTheEmailAddresses.extractEmailAddresses(List.of("a@b.c"))).isEqualTo("a@b.c");
   }
 
   @Test
   void allowMultipleTrailingDomains() {
-    assertThat(DetectTheEmailAddresses.extractEmailAddresses(ImmutableList.of("a@b.c.d.e")))
+    assertThat(DetectTheEmailAddresses.extractEmailAddresses(List.of("a@b.c.d.e")))
         .isEqualTo("a@b.c.d.e");
   }
 
   @Test
   void allowMultipleLeadingDomains() {
-    assertThat(DetectTheEmailAddresses.extractEmailAddresses(ImmutableList.of("a.b@c.d")))
+    assertThat(DetectTheEmailAddresses.extractEmailAddresses(List.of("a.b@c.d")))
         .isEqualTo("a.b@c.d");
   }
 
@@ -49,7 +47,7 @@ final class DetectTheEmailAddressesTest {
   void extractMultipleFromDifferentOrSameLineIntoLexicographicalOrder() {
     assertThat(
             DetectTheEmailAddresses.extractEmailAddresses(
-                ImmutableList.of("a.b@c.d, a.b@c.d a@b.c a.b@c.d", "a.b@c.d haha a@b.c")))
+                List.of("a.b@c.d, a.b@c.d a@b.c a.b@c.d", "a.b@c.d haha a@b.c")))
         .isEqualTo("a.b@c.d;a@b.c");
   }
 }
