@@ -3,7 +3,6 @@ package com.willmolloy.leetcode.problemset.algorithms.easy;
 import static com.google.common.truth.Truth.assertThat;
 import static com.willmolloy.testlib.CartesianProduct.cartesianProduct;
 
-import com.google.common.collect.ImmutableList;
 import java.util.List;
 import java.util.stream.Stream;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -35,7 +34,7 @@ final class P1002FindCommonCharactersTest {
 
   private static Stream<Arguments> examplesInputsAndOutputs() {
     return Stream.of(
-        Arguments.of(new String[] {"bella", "label", "roller"}, ImmutableList.of("e", "l", "l")),
-        Arguments.of(new String[] {"cool", "lock", "cook"}, ImmutableList.of("c", "o")));
+        Arguments.of(new String[] {"bella", "label", "roller"}, List.of("e", "l", "l")),
+        Arguments.of(new String[] {"cool", "lock", "cook"}, List.of("c", "o")));
   }
 }
