@@ -2,7 +2,6 @@ package com.willmolloy.leetcode.problemset.algorithms.easy;
 
 import static com.google.common.truth.Truth.assertThat;
 
-import com.google.common.collect.ImmutableList;
 import java.util.List;
 import java.util.stream.Stream;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -29,7 +28,6 @@ final class P1103DistributeCandiesToPeopleTest {
 
   static Stream<Arguments> examples() {
     return Stream.of(
-        Arguments.of(7, 4, ImmutableList.of(1, 2, 3, 1)),
-        Arguments.of(10, 3, ImmutableList.of(5, 2, 3)));
+        Arguments.of(7, 4, List.of(1, 2, 3, 1)), Arguments.of(10, 3, List.of(5, 2, 3)));
   }
 }
