@@ -2,7 +2,6 @@ package com.willmolloy.leetcode.problemset.algorithms.easy;
 
 import static com.google.common.truth.Truth.assertThat;
 
-import com.google.common.collect.ImmutableList;
 import java.util.List;
 import java.util.stream.Stream;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -26,9 +25,8 @@ final class P1470ShuffleTheArrayTest {
 
   static Stream<Arguments> examples() {
     return Stream.of(
-        Arguments.of(new int[] {2, 5, 1, 3, 4, 7}, 3, ImmutableList.of(2, 3, 5, 4, 1, 7)),
-        Arguments.of(
-            new int[] {1, 2, 3, 4, 4, 3, 2, 1}, 4, ImmutableList.of(1, 4, 2, 3, 3, 2, 4, 1)),
-        Arguments.of(new int[] {1, 1, 2, 2}, 2, ImmutableList.of(1, 2, 1, 2)));
+        Arguments.of(new int[] {2, 5, 1, 3, 4, 7}, 3, List.of(2, 3, 5, 4, 1, 7)),
+        Arguments.of(new int[] {1, 2, 3, 4, 4, 3, 2, 1}, 4, List.of(1, 4, 2, 3, 3, 2, 4, 1)),
+        Arguments.of(new int[] {1, 1, 2, 2}, 2, List.of(1, 2, 1, 2)));
   }
 }
