@@ -2,7 +2,6 @@ package com.willmolloy.leetcode.problemset.algorithms.easy;
 
 import static com.google.common.truth.Truth.assertThat;
 
-import com.google.common.collect.ImmutableList;
 import java.util.List;
 import java.util.stream.Stream;
 import org.junit.jupiter.api.Test;
@@ -28,9 +27,9 @@ final class P1560MostVisitedSectorInACircularTrackTest {
 
   static Stream<Arguments> examples() {
     return Stream.of(
-        Arguments.of(4, new int[] {1, 3, 1, 2}, ImmutableList.of(1, 2)),
-        Arguments.of(2, new int[] {2, 1, 2, 1, 2, 1, 2, 1, 2}, ImmutableList.of(2)),
-        Arguments.of(7, new int[] {1, 3, 5, 7}, ImmutableList.of(1, 2, 3, 4, 5, 6, 7)));
+        Arguments.of(4, new int[] {1, 3, 1, 2}, List.of(1, 2)),
+        Arguments.of(2, new int[] {2, 1, 2, 1, 2, 1, 2, 1, 2}, List.of(2)),
+        Arguments.of(7, new int[] {1, 3, 5, 7}, List.of(1, 2, 3, 4, 5, 6, 7)));
   }
 
   @Test
