@@ -2,7 +2,7 @@ package com.willmolloy.leetcode.problemset.algorithms.hard;
 
 import static com.google.common.truth.Truth.assertThat;
 
-import com.google.common.collect.ImmutableList;
+import java.util.List;
 import java.util.stream.Stream;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.MethodSource;
@@ -17,25 +17,21 @@ final class P126WordLadder2Test {
   @ParameterizedTest
   @MethodSource("fns")
   void example1(P126WordLadder2 fn) {
-    assertThat(
-            fn.findLadders(
-                "hit", "cog", ImmutableList.of("hot", "dot", "dog", "lot", "log", "cog")))
+    assertThat(fn.findLadders("hit", "cog", List.of("hot", "dot", "dog", "lot", "log", "cog")))
         .containsExactly(
-            ImmutableList.of("hit", "hot", "dot", "dog", "cog"),
-            ImmutableList.of("hit", "hot", "lot", "log", "cog"));
+            List.of("hit", "hot", "dot", "dog", "cog"), List.of("hit", "hot", "lot", "log", "cog"));
   }
 
   @ParameterizedTest
   @MethodSource("fns")
   void example2(P126WordLadder2 fn) {
-    assertThat(fn.findLadders("hit", "cog", ImmutableList.of("hot", "dot", "dog", "lot", "log")))
-        .isEmpty();
+    assertThat(fn.findLadders("hit", "cog", List.of("hot", "dot", "dog", "lot", "log"))).isEmpty();
   }
 
   @ParameterizedTest
   @MethodSource("fns")
   void alreadyAtEnd(P126WordLadder2 fn) {
-    assertThat(fn.findLadders("a", "a", ImmutableList.of())).containsExactly(ImmutableList.of("a"));
+    assertThat(fn.findLadders("a", "a", List.of())).containsExactly(List.of("a"));
   }
 
   static Stream<P126WordLadder2> fns() {
