@@ -2,7 +2,7 @@ package com.willmolloy.leetcode.problemset.algorithms.medium;
 
 import static com.google.common.truth.Truth.assertThat;
 
-import com.google.common.collect.ImmutableList;
+import java.util.List;
 import org.junit.jupiter.api.Test;
 
 /**
@@ -16,35 +16,33 @@ final class P127WordLadderTest {
 
   @Test
   void example1() {
-    assertThat(
-            fn.ladderLength(
-                "hit", "cog", ImmutableList.of("hot", "dot", "dog", "lot", "log", "cog")))
+    assertThat(fn.ladderLength("hit", "cog", List.of("hot", "dot", "dog", "lot", "log", "cog")))
         .isEqualTo(5);
   }
 
   @Test
   void example2() {
-    assertThat(fn.ladderLength("hit", "cog", ImmutableList.of("hot", "dot", "dog", "lot", "log")))
+    assertThat(fn.ladderLength("hit", "cog", List.of("hot", "dot", "dog", "lot", "log")))
         .isEqualTo(0);
   }
 
   @Test
   void wordListNotInChainOrder() {
-    assertThat(fn.ladderLength("hot", "dog", ImmutableList.of("hot", "dog", "dot"))).isEqualTo(3);
+    assertThat(fn.ladderLength("hot", "dog", List.of("hot", "dog", "dot"))).isEqualTo(3);
   }
 
   @Test
   void alreadyAtEnd() {
-    assertThat(fn.ladderLength("a", "a", ImmutableList.of())).isEqualTo(1);
+    assertThat(fn.ladderLength("a", "a", List.of())).isEqualTo(1);
   }
 
   @Test
   void oneChange() {
-    assertThat(fn.ladderLength("a", "b", ImmutableList.of("b"))).isEqualTo(2);
+    assertThat(fn.ladderLength("a", "b", List.of("b"))).isEqualTo(2);
   }
 
   @Test
   void oneChangeButNotInWordList() {
-    assertThat(fn.ladderLength("a", "b", ImmutableList.of("c"))).isEqualTo(0);
+    assertThat(fn.ladderLength("a", "b", List.of("c"))).isEqualTo(0);
   }
 }
