@@ -2,7 +2,6 @@ package com.willmolloy.leetcode.problemset.algorithms.medium;
 
 import static com.google.common.truth.Truth.assertThat;
 
-import com.google.common.collect.ImmutableList;
 import java.util.List;
 import java.util.stream.Stream;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -26,7 +25,7 @@ final class P347TopKFrequentElementsTest {
 
   static Stream<Arguments> examples() {
     return Stream.of(
-        Arguments.of(new int[] {1, 1, 1, 2, 2, 3}, 2, ImmutableList.of(1, 2)),
-        Arguments.of(new int[] {1}, 1, ImmutableList.of(1)));
+        Arguments.of(new int[] {1, 1, 1, 2, 2, 3}, 2, List.of(1, 2)),
+        Arguments.of(new int[] {1}, 1, List.of(1)));
   }
 }
