@@ -2,7 +2,7 @@ package com.willmolloy.leetcode.problemset.algorithms.medium;
 
 import static com.google.common.truth.Truth.assertThat;
 
-import com.google.common.collect.ImmutableList;
+import java.util.List;
 import org.junit.jupiter.api.Test;
 
 /**
@@ -18,21 +18,21 @@ final class P384ShuffleAnArrayTest {
     assertThat(solution.shuffle())
         .asList()
         .isAnyOf(
-            ImmutableList.of(1, 2, 3),
-            ImmutableList.of(1, 3, 2),
-            ImmutableList.of(2, 1, 3),
-            ImmutableList.of(2, 3, 1),
-            ImmutableList.of(3, 1, 2),
-            ImmutableList.of(3, 2, 1));
+            List.of(1, 2, 3),
+            List.of(1, 3, 2),
+            List.of(2, 1, 3),
+            List.of(2, 3, 1),
+            List.of(3, 1, 2),
+            List.of(3, 2, 1));
     assertThat(solution.reset()).asList().containsExactly(1, 2, 3).inOrder();
     assertThat(solution.shuffle())
         .asList()
         .isAnyOf(
-            ImmutableList.of(1, 2, 3),
-            ImmutableList.of(1, 3, 2),
-            ImmutableList.of(2, 1, 3),
-            ImmutableList.of(2, 3, 1),
-            ImmutableList.of(3, 1, 2),
-            ImmutableList.of(3, 2, 1));
+            List.of(1, 2, 3),
+            List.of(1, 3, 2),
+            List.of(2, 1, 3),
+            List.of(2, 3, 1),
+            List.of(3, 1, 2),
+            List.of(3, 2, 1));
   }
 }
