@@ -2,7 +2,7 @@ package com.willmolloy.leetcode.problemset.algorithms.medium;
 
 import static com.google.common.truth.Truth.assertThat;
 
-import com.google.common.collect.ImmutableList;
+import java.util.List;
 import org.junit.jupiter.api.Test;
 
 /**
@@ -18,11 +18,11 @@ final class P46PermutationsTest {
   void example() {
     assertThat(fun.permute(new int[] {1, 2, 3}))
         .containsExactly(
-            ImmutableList.of(1, 2, 3),
-            ImmutableList.of(1, 3, 2),
-            ImmutableList.of(2, 1, 3),
-            ImmutableList.of(2, 3, 1),
-            ImmutableList.of(3, 1, 2),
-            ImmutableList.of(3, 2, 1));
+            List.of(1, 2, 3),
+            List.of(1, 3, 2),
+            List.of(2, 1, 3),
+            List.of(2, 3, 1),
+            List.of(3, 1, 2),
+            List.of(3, 2, 1));
   }
 }
