@@ -2,7 +2,7 @@ package com.willmolloy.leetcode.problemset.algorithms.medium;
 
 import static com.google.common.truth.Truth.assertThat;
 
-import com.google.common.collect.ImmutableList;
+import java.util.List;
 import org.junit.jupiter.api.Test;
 
 /**
@@ -18,21 +18,18 @@ final class P554BrickWallTest {
   void example() {
     assertThat(
             fun.leastBricks(
-                ImmutableList.of(
-                    ImmutableList.of(1, 2, 2, 1),
-                    ImmutableList.of(3, 1, 2),
-                    ImmutableList.of(1, 3, 2),
-                    ImmutableList.of(2, 4),
-                    ImmutableList.of(3, 1, 2),
-                    ImmutableList.of(1, 3, 1, 1))))
+                List.of(
+                    List.of(1, 2, 2, 1),
+                    List.of(3, 1, 2),
+                    List.of(1, 3, 2),
+                    List.of(2, 4),
+                    List.of(3, 1, 2),
+                    List.of(1, 3, 1, 1))))
         .isEqualTo(2);
   }
 
   @Test
   void crossBrickInEveryRow() {
-    assertThat(
-            fun.leastBricks(
-                ImmutableList.of(ImmutableList.of(1), ImmutableList.of(1), ImmutableList.of(1))))
-        .isEqualTo(3);
+    assertThat(fun.leastBricks(List.of(List.of(1), List.of(1), List.of(1)))).isEqualTo(3);
   }
 }
