@@ -2,7 +2,7 @@ package com.willmolloy.leetcode.problemset.algorithms.medium;
 
 import static com.google.common.truth.Truth.assertThat;
 
-import com.google.common.collect.ImmutableList;
+import java.util.List;
 import org.junit.jupiter.api.Test;
 
 /**
@@ -17,6 +17,6 @@ final class P797AllPathsFromSourceToTargetTest {
   @Test
   void example() {
     assertThat(p797.allPathsSourceTarget(new int[][] {{1, 2}, {3}, {3}, {}}))
-        .containsExactly(ImmutableList.of(0, 1, 3), ImmutableList.of(0, 2, 3));
+        .containsExactly(List.of(0, 1, 3), List.of(0, 2, 3));
   }
 }
